pts-core: Various minor fixes
phoromatic: Fix possible case of local test profile download issues from Phoromatic Server
phoromatic: Warn when lacking database write access for Phoromatic Server
phoromatic: Support (opt-in) handling of non-text file log files
phoromatic: System log viewer improvements
phoromatic: Make SYSTEM_ID accessible to client
phodevi: Improve detection of new Intel oneAPI DPC++/C++ Compiler
phodevi: ACPI Platform Profile reporting support on Linux
phodevi: Support reporting NVIDIA BAR1 total memory / Radeon vRAM visible memory (Resizable BAR / ReBAR status)

Phoronix Test Suite 10.4.0
16 May 2021

pts-core: Ubuntu 21.04 dependency updates for changed/removed package names
pts-core: Add "auto-resolution-wide" option
pts-core: Add $CPU_THREADS_PER_CORE helper
pts-core: Allow perf-per-dollar-per-hour in the result viewer, extending perf-per-dollar HTML helper
pts-core: Add PTS_EXTRA_SYSTEM_LOGS_DIR environment variable to allow pointing to directory of extra system log files
pts-core: Add RepositoryURL option for test profiles
phodevi: Intel Linux graphics string format improvement
phoromatic: Treat set context scripts as a file rather than executing it as a buffer
phoromatic: Allow passing Phodevi system properties to Phoromatic Server
phodevi: Add some new properties, port some pts_network info to phodevi interfaces
system_monitor: Adjust perf-per precision

Phoronix Test Suite 10.4.0 Milestone 1
17 March 2021

pts-core: Optimize out sorting percentile values array excess times
pts-core: Optimization to avoid re-parsing test profile definition multiple times
pts-core: Optimization to avoid re-parsing installed test metadata multiple times
pts-core: Allow longer HTTP timeouts on OpenBenchmarking.org result uploads if needed
pts-core: Allow sorting runs within a result file from within the result viewer web interface

Phoronix Test Suite 10.2.2
17 February 2021

pts-core: Add helper text when hitting a download with no working mirrors